<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anroid.udacityquizapp.MainActivity"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_question_1"
            android:text="@string/question1"
            style="@style/QuestionTextStyle"
            />

        <RadioGroup
            android:id="@+id/rg_q1"
            style="@style/GroupStyle"
            >
            <RadioButton
                android:id="@+id/rb_q1_what"
                android:text="@string/what"
                style="@style/OptionsStyle"
                />
            <RadioButton
                android:id="@+id/rb_q1_when"
                android:text="@string/when"
                style="@style/OptionsStyle"
                />
            <RadioButton
                android:id="@+id/rb_q1_which"
                android:text="@string/which"
                style="@style/OptionsStyle"
                />
            <RadioButton
                android:id="@+id/rb_q1_that_answer"
                android:text="@string/that"
                style="@style/OptionsStyle"
                />
        </RadioGroup>


        <TextView
            android:id="@+id/tv_question_2"
            android:text="@string/question2"
            style="@style/QuestionTextStyle"
            />

        <RadioGroup
            android:id="@+id/rg_q2"
            style="@style/GroupStyle"
            >
            <RadioButton
                android:id="@+id/rb_q2_for"
                android:text="@string/r_for"
                style="@style/OptionsStyle"
                />
            <RadioButton
                android:id="@+id/rb_q2_that"
                android:text="@string/that"
                style="@style/OptionsStyle"
                />
            <RadioButton
                android:id="@+id/rb_q2_how"
                android:text="@string/how"
                style="@style/OptionsStyle"
                />
            <RadioButton
                android:id="@+id/rb_q2_why_answer"
                android:text="@string/why"
                style="@style/OptionsStyle"
                />
        </RadioGroup>



        <TextView
            android:id="@+id/tv_question_3"
            android:text="@string/question3"
            style="@style/QuestionTextStyle"
            />

        <RadioGroup
            android:id="@+id/rg_q3"
            style="@style/GroupStyle"
            >
            <RadioButton
                android:id="@+id/rb_q3_option1"
                android:text="@string/q3_will_be_dealt"
                style="@style/OptionsStyle"
                />
            <RadioButton
                android:id="@+id/rb_q3_option2"
                android:text="@string/q3_will_deal_with"
                style="@style/OptionsStyle"
                />
            <RadioButton
                android:id="@+id/rb_q3_option3"
                android:text="@string/q3_will_deal"
                style="@style/OptionsStyle"
                />
            <RadioButton
                android:id="@+id/rb_q3_option4_answer"
                android:text="@string/q3_will_be_dealt_with"
                style="@style/OptionsStyle"
                />
        </RadioGroup>


        <TextView
            android:id="@+id/tv_question_4"
            android:text="@string/question4"
            style="@style/QuestionTextStyle"
            />
        <LinearLayout
            style="@style/GroupStyle"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/cb_q4_toward_answer"
                android:text="@string/toward"
                style="@style/OptionsStyle"
                />
            <CheckBox
                android:id="@+id/cb_q4_there"
                android:text="@string/there"
                style="@style/OptionsStyle"
                />
            <CheckBox
                android:id="@+id/cb_q4_above_answer"
                android:text="@string/above"
                style="@style/OptionsStyle"
                />
            <CheckBox
                android:id="@+id/cb_q4_when"
                android:text="@string/when"
                style="@style/OptionsStyle"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_question_5"
            android:text="@string/question5"
            style="@style/QuestionTextStyle"
            />
        <LinearLayout
            style="@style/GroupStyle"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/cb_q5_then_answer"
                android:text="@string/then"
                style="@style/OptionsStyle"
                />
            <CheckBox
                android:id="@+id/cb_q5_quiet"
                android:text="@string/quiet"
                style="@style/OptionsStyle"
                />
            <CheckBox
                android:id="@+id/cb_q5_gently_answer"
                android:text="@string/gently"
                style="@style/OptionsStyle"
                />
            <CheckBox
                android:id="@+id/cb_q5_quite_answer"
                android:text="@string/quite"
                style="@style/OptionsStyle"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_question_6"
            android:text="@string/question6"
            style="@style/QuestionTextStyle"
            />
        <LinearLayout
            style="@style/GroupStyle"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:typeface="serif"
                android:text="@string/q6_part1"
                />
            <EditText
                android:id="@+id/et_q6_answer"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:inputType="text"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:typeface="serif"
                android:text="@string/q6_part2"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_question_7"
            android:text="@string/question7"
            style="@style/QuestionTextStyle"
            />
        <LinearLayout
            style="@style/GroupStyle"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:typeface="serif"
                android:text="@string/q7_part1"
                />
            <EditText
                android:id="@+id/et_q7_answer"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:inputType="text"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:typeface="serif"
                android:text="@string/q7_part2"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textAllCaps="true"
            android:text="@string/submit"
            android:typeface="sans"
            android:textStyle="bold"
            android:textSize="18sp"
            android:onClick="onSumbitClick"/>

    </LinearLayout>
</ScrollView>
